--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "compression": "^1.7.4",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.2",
@@ -19,7 +21,9 @@
   },
   "devDependencies": {
     "@types/compression": "^1.7.5",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/helmet": "^4.0.0",
     "@types/typescript": "^2.0.0"
   }
 }
