--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
+    "@types/morgan": "^1.9.9",
     "@types/typescript": "^2.0.0"
   }
 }
